--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This project was tested with summernote-rails gem in Rails 4.0 project.
 
-Things you may want to cover:
+Summernote-rails url :
 
-* Ruby version
+http://github.com/rorlab/summernote-rails
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Thank you.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
